fix: remove white space ICD-729

--- a/src/Styles/pages/_listagem.scss
+++ b/src/Styles/pages/_listagem.scss
@@ -573,7 +573,6 @@ body.busca-chaordic {
 	}
 
 	.prateleira.default ul li .detalhes .prod-info .nome {
-		height: 145px;
 		overflow: hidden;
 	}
 
